syntax = "proto3";

package productCatalog;

option go_package = "./proto;productCatalog";

import "proto/tax.proto";

service ProductCatalogService {
    // tax calculation
    rpc CalculateTax(CalculateTaxRequest) returns(CalculateTaxResponse) {}
}


