syntax = "proto3";

package productCatalog;

option go_package = "./proto;productCatalog";

message CalculateTaxRequest{
    repeated ProductLineItem line_items = 1;
    CustomerDetails customer_details = 2;
    double shipping_fee = 3;
}

message CalculateTaxResponse{
    string id = 1;
    double amount_total = 2;
    double tax_amount = 3;
}

message ProductLineItem{
    double amount = 1;
    int64 quantity = 2;
    string reference = 3;
    string tax_code = 4;
    string tax_behavior = 5;
}

message CustomerDetails{
    string country = 1;
    string state = 2;
    string postal_code = 3;
    string address_type = 4;
    string city = 5;
    string line1 = 6;
}